working on the frontend updates

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+body{
+  max-width: 1920px;
+  margin: 0 auto;
+  font-family:  "Roboto", sans-serif;
+  min-height: 100vh;
+}
