--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,31 @@
-<p>navbar works!</p>
+<div class="navbar">
+  <div class="container-fluid">
+    <form class="d-flex" role="search">
+      <input
+        class="form-control w"
+        type="search"
+        placeholder="🔍 Busca un producto"
+        aria-label="Search"
+        style="width: 200px;"
+      />
+    </form>
+    <a class="navbar-brand" href="#">
+      <img
+        src="../../../../assets/images/Logos/Logo2.png"
+        alt="Bootstrap"
+        width="150"
+        height="150"
+      />
+    </a>
+    <div class="d-flex align-items-center">
+      <button class="btn btn-secondary">Log In</button>
+      <a>
+        <img src="" alt="" />
+        <p>Carrito</p>
+      </a>
+    </div>
+  </div>
+</div>
+<div class="d-flex justify-content-center">
+  <hr style="width: 1500px;">
+</div>
