--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,32 @@
 <nav>
 <app-navbar/>
 </nav>
-<div></div>
+<div>
+  <div class="option-container text-center mt-2 mb-3">
+    <a class="option-links" href="">SOFTWARE</a>
+    <a class="option-links" href="">AUDIO</a>
+    <a class="option-links" href="">MICRÓFONOS</a>
+    <a class="option-links" href="">MIDI</a>
+    <a class="option-links" href="">CABLES</a>
+    <a class="option-links" href="">OFERTAS</a>
+  </div>
+  <header class="header-container">
+    <h1 class="h1-Title">Bienvenido a MusicStudio</h1>
+  </header>
+  <section class="section1-container text-center my-4">
+    <h3>NUESTROS PRODUCTOS</h3>
+  </section>
+  <section class="section2-container text-center my-4">
+    <h3>NUESTRAS VENTAJAS</h3>
+  </section>
+  <section class="section3-container text-center my-4">
+    <h3>(Aquí va la cuadrícula de imágenes)</h3>
+  </section>
+  <section class="section4-container text-center my-4">
+    <h3>LAS MEJORES MARCAS</h3>
+  </section>
+
+</div>
 <footer>
   <app-footer/>
 </footer>
