--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer-container{
-  background-color: #333;
+  background-color: #7c898b;
   color: white;
   padding: 100px;
   text-align: center;
