--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,27 +1,30 @@
 <div class="navbar">
-  <div class="container-fluid">
-    <form class="d-flex" role="search">
+  <div class="container-fluid px-4">
+    <form class="d-flex align-items-center" role="search">
+      <img class="searchLogo" src="../../../../assets/images/iconos/lupa.png" alt="searchIcon"
+      width="23"
+        height="23">
       <input
-        class="form-control w"
+        class="form-control search-input "
         type="search"
-        placeholder="🔍 Busca un producto"
+        placeholder="Busca un producto"
         aria-label="Search"
-        style="width: 200px;"
-      />
+      >
     </form>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand " href="#">
       <img
-        src="../../../../assets/images/Logos/Logo2.png"
-        alt="Bootstrap"
-        width="150"
-        height="150"
+        src="../../../../assets/images/Logos/MainLogo.png"
+        alt="MainLogo"
+        width="100"
+        height="100"
       />
     </a>
     <div class="d-flex align-items-center">
-      <button class="btn btn-secondary">Log In</button>
-      <a>
-        <img src="" alt="" />
-        <p>Carrito</p>
+      <button class="btn btn-color">Log In</button>
+      <a href="#" class="cartLogoButton ms-3">
+        <img src="../../../../assets/images/iconos/carrito.png" alt="cartLogo"
+        width="50"
+        height="50"/>
       </a>
     </div>
   </div>
