--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,1 +1,24 @@
 
+.option-container{
+  display: flex;
+  gap: 100px;
+  justify-content: center;
+  .option-links{
+    color: black;
+    text-decoration: none;
+  }
+}
+.header-container {
+  background-image: url('../../../assets/images/web-images/portadaHome.jpeg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 20%;
+  .h1-Title{
+    font-size: 60px;
+  }
+}
