home-page updates

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -10,8 +10,10 @@
     <a class="option-links" href="">CABLES</a>
     <a class="option-links" href="">OFERTAS</a>
   </div>
-  <header class="header-container">
-    <h1 class="h1-Title">Bienvenido a MusicStudio</h1>
+  <header class="header-main-container">
+    <div class="header-container d-flex justify-content-center">
+      <h1 class="h1-Title">Bienvenido a MusicStudio</h1>
+    </div>
   </header>
   <section class="section1-container text-center my-4">
     <h3>NUESTROS PRODUCTOS</h3>
