--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   <app-navbar />
 </nav>
 <div>
-  <div class="option-container text-center mt-2 mb-3">
+  <div class="option-container text-center mt-3 mb-4">
     <a class="option-links" href="">SOFTWARE</a>
     <a class="option-links" href="">AUDIO</a>
     <a class="option-links" href="">MICRÓFONOS</a>
@@ -18,36 +18,82 @@
       <h1 class="h1-Title">MusicStudio</h1>
     </div>
   </header>
-  <section class="section1-container text-center my-4">
-    <h3 class="my-5">NUESTROS PRODUCTOS</h3>
-    <div class="row align-items-center">
+  <section class="section1-container text-center">
+    <h3 class="section1-title mb-5">NUESTROS PRODUCTOS</h3>
+    <div class="row">
       <div
-        *ngFor="let category of categories"
-        class="categoriesCard-container col-md-3 mb-4 d-flex justify-content-center"
+        class="categoriesCard-container d-flex flex-wrap justify-content-center"
       >
-        <div class="">
-          <article>
-            <figure>
-              <img [src]="category.image"
-              class="card-img-top categoryImg"
-              alt="categoryImg" />
+        <div *ngFor="let category of categories1" class="card-container mx-4">
+          <a href="#" class="cardLink">
+            <figure class="cardBody">
+              <img
+                [src]="category.image"
+                class="categoryImg"
+                alt="categoryImg"
+              />
             </figure>
-          </article>
-          <a href="#" class="card-body">
-            <h5 class="card-title">{{ category.categoryName }}</h5>
           </a>
+          <h6 class="card-title mt-3 mb-4">{{ category.categoryName }}</h6>
+        </div>
+      </div>
+      <div
+        class="categoriesCard-container d-flex flex-wrap justify-content-center"
+      >
+        <div *ngFor="let category of categories2" class="card-container mx-4">
+          <a href="#" class="cardLink">
+            <figure class="cardBody">
+              <img
+                [src]="category.image"
+                class="categoryImg"
+                alt="categoryImg"
+              />
+            </figure>
+          </a>
+          <h6 class="card-title mt-3 mb-4">{{ category.categoryName }}</h6>
         </div>
       </div>
     </div>
-
-
-
   </section>
-  <section class="section2-container text-center my-4">
-    <h3>NUESTRAS VENTAJAS</h3>
+  <section class="section2-container text-center">
+    <h3 class="section1-title mb-5">NUESTRAS VENTAJAS</h3>
+    <div class="row">
+      <div
+        class="benefitsCard-container d-flex flex-wrap justify-content-center"
+      >
+        <div *ngFor="let benefit of benefits1" class="card-container mx-1">
+          <a href="#" class="cardLink">
+            <figure class="cardBody">
+              <img
+                [src]="benefit.image"
+                alt="benefitsIcon"
+                class="benefitIcons"
+              />
+            </figure>
+          </a>
+          <p class="benefitTitle mt-2 mb-5">{{ benefit.title }}</p>
+        </div>
+      </div>
+      <div
+        class="benefitsCard-container d-flex flex-wrap justify-content-center"
+      >
+        <div *ngFor="let benefit of benefits2" class="card-container mx-1">
+          <a href="#" class="cardLink">
+            <figure class="cardBody">
+              <img
+                [src]="benefit.image"
+                alt="benefitsIcon"
+                class="benefitIcons"
+              />
+            </figure>
+          </a>
+          <p class="benefitTitle mt-2 mb-5">{{ benefit.title }}</p>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="section3-container text-center my-4">
-    <h3>(Aquí va la cuadrícula de imágenes)</h3>
+    <h3>(HACER MEJOR LA CUADRÍCULA)</h3>
   </section>
   <section class="section4-container text-center my-4">
     <h3>LAS MEJORES MARCAS</h3>
