--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -20,7 +20,9 @@
       />
     </a>
     <div class="d-flex align-items-center">
-      <button class="btn btn-color">Log In</button>
+      <button class="btn btn-color"
+      (click)="redirectToLogin()"
+      >Log In</button>
       <a href="#" class="cartLogoButton ms-3">
         <img src="../../../../assets/images/iconos/carrito.png" alt="cartLogo"
         width="50"
