--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,1 +1,5 @@
-<p>user-profile works!</p>
+<app-navbar/>
+<section class="container userProfileContainer">
+  <h1>ESTE ES EL PERFIL DEL USUARIO</h1>
+</section>
+<app-footer/>
