--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,5 +1,13 @@
 <app-navbar/>
 <section class="container userProfileContainer">
   <h1>ESTE ES EL PERFIL DEL USUARIO</h1>
+
+  <p>Nombre: {{user?.name}}</p>
+  <p>Apellido: {{user?.lastname}}</p>
+  <p>Dni: {{user?.dni}}</p>
+  <p>Ciudad: {{user?.city}}</p>
+  <p>Provincia: {{user?.province}}</p>
+  <p>Email: {{user?.email}}</p>
+
 </section>
 <app-footer/>
