--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -36,9 +36,11 @@
       <ng-template #logged>
         <div class="dropdown-container">
           <ul class=" btn-color2">
-            <li><a (click)="toggleDropdown()">Hola {{ userData?.name | titlecase }} &dtrif;</a>
+            <li><a (click)="toggleDropdown()">Hola {{ user?.name | titlecase }} &dtrif;</a>
               <ul class="dropdown" [ngClass]="{ 'show': isDropdownOpen }">
-                <li><a class="link" [routerLink]="['/userProfile']"> Mi perfil</a></li>
+                <li><a class="link"
+                  [routerLink]="['/userProfile', user?.id]">Mi Perfil
+                </a></li>
                 <li><a class="link" [routerLink]="['/']"> Home</a></li>
                 <li><a class="link" (click)="logOut()">
                   Log Out</a></li>
