--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,13 +1,13 @@
-<app-navbar/>
-<section class="container userProfileContainer">
-  <h1>ESTE ES EL PERFIL DEL USUARIO</h1>
-
-  <p>Nombre: {{user?.name}}</p>
-  <p>Apellido: {{user?.lastname}}</p>
-  <p>Dni: {{user?.dni}}</p>
-  <p>Ciudad: {{user?.city}}</p>
-  <p>Provincia: {{user?.province}}</p>
-  <p>Email: {{user?.email}}</p>
-
+<app-navbar />
+<section class="userProfileContainer d-flex">
+  <div class="row">
+    <div class="sidebar-container col-4">
+      <app-side-bar />
+    </div>
+    <div class="user-container col-8">
+      <router-outlet></router-outlet>
+      <!-- <app-user-data/> -->
+    </div>
+  </div>
 </section>
-<app-footer/>
+<app-footer />
