--- a/src/app/pages/user-profile/user-profile.component.scss
+++ b/src/app/pages/user-profile/user-profile.component.scss
@@ -1,3 +1,8 @@
 .userProfileContainer{
   height: 100vh;
+  margin: 50px 0;
+  .user-container{
+    padding-left: 50px;
+    height: 100vh;
+  }
 }
