--- a/src/app/pages/user-profile/user-profile.component.scss
+++ b/src/app/pages/user-profile/user-profile.component.scss
@@ -1,8 +1,15 @@
-.userProfileContainer{
+.userProfileContainer {
   height: 100vh;
   margin: 50px 0;
-  .user-container{
-    padding-left: 50px;
-    height: 100vh;
+  display: flex;
+  padding: 0 20px;
+  .user-container {
+    background-color: rgba(245, 245, 245, 0.5);
+    border-radius: 10px;
+    height: 100%;
+    padding: 40px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.319);
+    width: 100%;
+    margin-left: 80px;
   }
 }
