--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -19,6 +19,13 @@
   color: white;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
 }
+.HelloWord{
+  margin: 10px 0 -6px 0;
+}
+
+.dropdown{
+  margin-top: 20px;
+}
 .cartLogoButton {
   cursor: pointer;
   filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));
@@ -87,4 +94,3 @@
   }
 
 }
-
