--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebarContainer">
-  <div class="flex-shrink-0 p-3" style="width: 280px;">
+  <div class="flex-shrink-0 p-3">
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false"
