--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -1,8 +1,10 @@
 .sidebarContainer{
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.5);
   box-shadow: 10px 0px 5px -1px rgba(0, 0, 0, 0.111);
   height: 100vh;
-  width: 20vw;
+  width: 280px;
+  border-radius: 10px;
+
   button{
     font-size: 20px;
   }
